# cimgui-go

./: .gitignore  .gitmodules  .golangci.yml  LICENSE  Makefile  README.md  backend.cpp  backend.go  backend.h  backend_wrapper.cpp  backend_wrapper.h  callback_helper.go  cimgui.go  cimgui_enums.go  cimgui_funcs.go  cimgui_structs.go  cimgui_structs_accessor.cpp  cimgui_structs_accessor.h  cimgui_test.go  cimgui_typedefs.cpp  cimgui_typedefs.go  cimgui_typedefs.h  cimgui_wrapper.cpp  cimgui_wrapper.h  cimguizmo_enums.go  cimguizmo_funcs.go  cimguizmo_typedefs.cpp  cimguizmo_typedefs.go  cimguizmo_typedefs.h  cimguizmo_wrapper.cpp  cimguizmo_wrapper.h  cimmarkdown_enums.go  cimmarkdown_funcs.go  cimmarkdown_structs.go  cimmarkdown_structs_accessor.cpp  cimmarkdown_structs_accessor.h  cimmarkdown_typedefs.cpp  cimmarkdown_typedefs.go  cimmarkdown_typedefs.h  cimmarkdown_wrapper.cpp  (+55 more)
.github/: dependabot.yml
ImGuiColorTextEdit/: callbacks.go  cflags.go  cimcte_callbacks.go  cimcte_enums.go  cimcte_funcs.go  cimcte_structs_accessor.cpp  cimcte_structs_accessor.h  cimcte_typedefs.cpp  cimcte_typedefs.go  cimcte_typedefs.h  cimcte_wrapper.cpp  cimcte_wrapper.h  custom_windows.go  enums.go  funcs.go  structs_accessor.cpp  structs_accessor.h  typedefs.cpp  typedefs.go  typedefs.h  wrapper.cpp  wrapper.h
backend/: backend.go  cflags.go  cimgui.go  glfw_backend.cpp  glfw_backend.go  glfw_backend.h  sdl_backend.cpp  sdl_backend.go  sdl_backend.h  texture.go
cimgui/: CMakeLists.txt  VERSION.txt  cimgui.cpp  cimgui.h  cimgui_impl.h  cimguizmo.cpp  cimguizmo.h  cimmarkdown.cpp  cimmarkdown.h  cimnodes.cpp  cimplot.cpp  cimplot.h  doc.go
cimgui/cimgui_templates/: definitions.json  structs_and_enums.json  typedefs_dict.json
cimgui/cimguizmo_templates/: definitions.json  structs_and_enums.json  typedefs_dict.json
cimgui/cimmarkdown_templates/: definitions.json  structs_and_enums.json  typedefs_dict.json
cimgui/cimnodes_templates/: structs_and_enums.json  typedefs_dict.json
cimgui/cimplot_templates/: definitions.json  structs_and_enums.json
cimgui/generator/: cimgui_template.cpp  generator.sh  preprocesed.h
cimgui/generator/output/: cimgui_impl.h  definitions.json  definitions.lua  impl_definitions.json  impl_definitions.lua  overloads.txt  structs_and_enums.json  structs_and_enums.lua  typedefs_dict.json  typedefs_dict.lua
cimgui/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
cimgui/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_osx.mm  imgui_impl_sdl2.cpp  imgui_impl_wgpu.cpp  imgui_impl_win32.cpp
cimgui/imgui/docs/: BACKENDS.md  CHANGELOG.txt  FAQ.md  README.md
cimgui/imgui/examples/: imgui_examples.sln
cimgui/imgui/examples/example_allegro5/: example_allegro5.vcxproj
cimgui/imgui/examples/example_glfw_opengl2/: example_glfw_opengl2.vcxproj  example_glfw_opengl2.vcxproj.filters
cimgui/imgui/examples/example_glfw_opengl3/: example_glfw_opengl3  example_glfw_opengl3.vcxproj  example_glfw_opengl3.vcxproj.filters  imgui.ini
cimgui/imgui/examples/example_glfw_vulkan/: example_glfw_vulkan.vcxproj  example_glfw_vulkan.vcxproj.filters
cimgui/imgui/examples/example_glut_opengl2/: example_glut_opengl2.vcxproj  main.cpp
cimgui/imgui/examples/example_sdl2_directx11/: example_sdl2_directx11.vcxproj  example_sdl2_directx11.vcxproj.filters
cimgui/imgui/examples/example_sdl2_opengl2/: example_sdl2_opengl2.vcxproj  example_sdl2_opengl2.vcxproj.filters  main.cpp
cimgui/imgui/examples/example_sdl2_opengl3/: example_sdl2_opengl3.vcxproj  example_sdl2_opengl3.vcxproj.filters  main.cpp
cimgui/imgui/examples/example_sdl2_sdlrenderer/: example_sdl2_sdlrenderer.vcxproj  example_sdl2_sdlrenderer.vcxproj.filters  main.cpp
cimgui/imgui/examples/example_sdl2_vulkan/: example_sdl2_vulkan.vcxproj  example_sdl2_vulkan.vcxproj.filters
cimgui/imgui/examples/example_sdl3_opengl3/: example_sdl3_opengl3.vcxproj  example_sdl3_opengl3.vcxproj.filters
cimgui/imgui/examples/example_sdl_sdlrenderer/: example_sdl_sdlrenderer.vcxproj  example_sdl_sdlrenderer.vcxproj.filters
cimgui/imgui/examples/example_win32_directx10/: example_win32_directx10.vcxproj  example_win32_directx10.vcxproj.filters
cimgui/imgui/examples/example_win32_directx11/: example_win32_directx11.vcxproj  example_win32_directx11.vcxproj.filters
cimgui/imgui/examples/example_win32_directx12/: example_win32_directx12.vcxproj  example_win32_directx12.vcxproj.filters
cimgui/imgui/examples/example_win32_directx9/: example_win32_directx9.vcxproj  example_win32_directx9.vcxproj.filters
cimgui/imgui/examples/example_win32_opengl3/: example_win32_opengl3.vcxproj
cimplot/: README.md  cimplot.h
cwrappers/: VERSION.txt  cimCTE.cpp  cimCTE.h  cimgui.cpp  cimgui.h  cimgui_impl.cpp  cimgui_impl.h  cimguizmo.cpp  cimguizmo.h  cimmarkdown.h  cimnodes.cpp  cimnodes.h  cimplot.cpp  cimplot.h
cwrappers/ImGuiColorTextEdit/example/: CMakeLists.txt  README.md  dejavu.cpp  dejavu.h  dejavu.lic  editor.cpp  editor.h  main.cpp
datautils/: type_wrapper.go  vector.go  wrappable_types.go
ebiten-backend/: README.md  backend.go  backend_flags.go  cimgui_backend_impl.go  clipboard.go  doc.go  ebimgui.go  ebiten_api.go  ebiten_backend.go  keymap.go  manager.go  render.go  txcache.go
examples/: go.mod  go.sum  imgui.ini  main.go
glfwbackend/: cflags.go  glfw_backend.cpp  glfw_backend.go  glfw_backend.h
handwritten/: backend.cpp  backend.h  extra_types.h  input_text.go
idiomatic/: backend.cpp  backend.go  cimgui_enums.go  cimgui_funcs.go  cimgui_structs.go  cimgui_structs_accessor.cpp  cimgui_structs_accessor.h  cimgui_wrapper.cpp  cimgui_wrapper.h  cimplot_enums.go  cimplot_funcs.go  cimplot_structs.go  cimplot_wrapper.cpp  cimplot_wrapper.h  extra_types.go  input_text.go  texture.go  type_accessor.go  type_wrapper.go  util.go  vector_helpers.go  vector_helpers_test.go
imgui/: assert.go  callbacks.go  cflags.go  cimgui_callbacks.go  cimgui_funcs.go  cimgui_structs_accessor.cpp  cimgui_structs_accessor.h  (+38 more)
lib/: CMakeLists.txt
(+339 files in other folders)
